--- a/app/src/main/res/layout/info_booking_fragment.xml
+++ b/app/src/main/res/layout/info_booking_fragment.xml
@@ -241,7 +241,7 @@
                 android:layout_gravity="bottom"
                 android:layout_weight="1"
                 android:background="@color/colorPrimary"
-                android:text="Back" />
+                android:text="@string/back" />
 
 
 
