--- a/app/src/main/res/layout/booking_fragment.xml
+++ b/app/src/main/res/layout/booking_fragment.xml
@@ -280,7 +280,7 @@
             android:layout_gravity="bottom"
             android:layout_weight="1"
             android:background="@color/common_signin_btn_default_background"
-            android:text="Cancel" />
+            android:text="@string/cancel" />
 
         <Button
             android:id="@+id/booking"
@@ -289,7 +289,7 @@
             android:layout_gravity="bottom"
             android:layout_weight="1"
             android:background="@color/colorPrimary"
-            android:text="Booking" />
+            android:text="@string/bookingNow" />
 
 
     </LinearLayout>
