--- a/app/src/main/res/layout/menu_portions_fragment.xml
+++ b/app/src/main/res/layout/menu_portions_fragment.xml
@@ -165,7 +165,7 @@
             android:layout_gravity="bottom"
             android:layout_weight="1"
             android:background="@color/common_signin_btn_default_background"
-            android:text="Cancel" />
+            android:text="@string/cancel" />
 
         <Button
             android:id="@+id/save"
@@ -174,7 +174,7 @@
             android:layout_gravity="bottom"
             android:layout_weight="1"
             android:background="@color/colorPrimary"
-            android:text="Save" />
+            android:text="@string/save" />
 
 
     </LinearLayout>
