service+ progres bar

--- a/app/src/main/res/layout/main_list_fragment.xml
+++ b/app/src/main/res/layout/main_list_fragment.xml
@@ -3,6 +3,14 @@
     android:orientation="vertical" android:layout_width="match_parent"
     android:layout_height="match_parent">
 
+    <ProgressBar
+        android:id="@+id/mainListProgressBar"
+        style="?android:attr/progressBarStyle"
+        android:layout_width="fill_parent"
+        android:layout_height="wrap_content"
+        android:indeterminate="true"
+        android:layout_alignParentStart="true"
+        android:layout_alignTop="@android:id/empty" />
 
     <ListView
         android:id="@+id/listMeeting"
@@ -13,7 +21,7 @@
         android:id="@android:id/empty"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:text="@string/emptyMeeting"
+
         android:layout_centerVertical="true"
         android:layout_centerHorizontal="true" />
 
